MESSAGE("current path:" ${CMAKE_CURRENT_SOURCE_DIR})

#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Core/Command/)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Core/Common/)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Core/Pipeline/)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Core/Resource/)
#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Core/)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

#Set D3dCore files
file(GLOB D3d_CORE_HEADER_FILES
${CMAKE_CURRENT_SOURCE_DIR}/Core/*.h
${CMAKE_CURRENT_SOURCE_DIR}/Core/Command/*.h
${CMAKE_CURRENT_SOURCE_DIR}/Core/Common/*.h
${CMAKE_CURRENT_SOURCE_DIR}/Core/Pipeline/*.h
${CMAKE_CURRENT_SOURCE_DIR}/Core/Resource/*.h)

file(GLOB D3d_CORE_SOURCE_FILES  
${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/Core/Command/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/Core/Common/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/Core/Pipeline/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/Core/Resource/*.cpp)

#D3dRHI
file(GLOB D3d_RHI_HEADER_FILES
${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

file(GLOB D3d_RHI_SOURCE_FILES
${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

#D3dComponents
file(GLOB_RECURSE D3d_COMPONENTS_HEADER_FILES
${CMAKE_CURRENT_SOURCE_DIR}/D3dComponents/*.h)

file(GLOB_RECURSE D3d_COMPONENTS_SOURCE_FILES
${CMAKE_CURRENT_SOURCE_DIR}/D3dComponents/*.cpp)

#D3dModules
file(GLOB_RECURSE D3d_MODULES_HEADER_FILES
${CMAKE_CURRENT_SOURCE_DIR}/Modules/*.h)

file(GLOB_RECURSE D3d_MODULES_SOURCE_FILES
${CMAKE_CURRENT_SOURCE_DIR}/Modules/*.cpp)


source_group(include/D3dCoreInclude FILES ${D3d_CORE_HEADER_FILES})
source_group(src/D3dCoreSource FILES ${D3d_CORE_SOURCE_FILES})
source_group(include/D3dInclude FILES ${D3d_RHI_HEADER_FILES})
source_group(src/D3dSource FILES ${D3d_RHI_SOURCE_FILES})
source_group(include/D3dComponents FILES ${D3d_COMPONENTS_HEADER_FILES})
source_group(src/D3dComponents FILES ${D3d_COMPONENTS_SOURCE_FILES})
source_group(include/Modules FILES ${D3d_MODULES_HEADER_FILES})
source_group(src/Modules FILES ${D3d_MODULES_SOURCE_FILES})

add_library(D3dRHI STATIC 
${D3d_CORE_HEADER_FILES} ${D3d_CORE_SOURCE_FILES} 
${D3d_RHI_HEADER_FILES} ${D3d_RHI_SOURCE_FILES} 
${D3d_COMPONENTS_HEADER_FILES} ${D3d_COMPONENTS_SOURCE_FILES}
${D3d_MODULES_HEADER_FILES} ${D3d_MODULES_SOURCE_FILES})
target_link_libraries(D3dRHI ${ZLIB_DEBUG_LIBRARY} d3d12 dxguid dxgi d3dcompiler)

if(DEBUG_FLAG EQUAL 1)
    target_link_libraries(D3dRHI 
    ${BULLETLINEARMATH_DEBUG_LIBRARY}
    ${BULLETDYNAMICS_DEBUG_LIBRARY}
    ${BULLETCOLLISION_DEBUG_LIBRARY}
    ${IMGUI_DEBUG_LIBRARY})
elseif(DEBUG_FLAG EQUAL 0)
    target_link_libraries(D3dRHI 
    ${BULLETLINEARMATH_RELEASE_LIBRARY}
    ${BULLETDYNAMICS_RELEASE_LIBRARY}
    ${BULLETCOLLISION_RELEASE_LIBRARY}
    ${IMGUI_RELEASE_LIBRARY})
endif()
